# pytealext

./: .gitignore  .pylintrc  README.md  lint.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: main.yml
docs/: evaluator.md  inner_transactions.md
examples/: array.py  auto_load_scratch_var.py  u64_array.py
pytealext/: __init__.py  array.py  assemble.py  auto_load_scratch_var.py  cas.py  evaluator.py  fastexp.py  inner_transactions.py  lazy.py  mul128.py  muldiv64.py  saturation_math.py  serialize.py  state.py  u64_array.py
pytealext/evaluator/: __init__.py  analytics.py  evaluator.py  tools.py
pytealext/evaluator/data/: __init__.py  gen_op_costs.py  op_costs.py  op_costs.txt
tests/: all_test.py  analytics_test.py  array_test.py  auto_load_scratch_var_test.py  cas_test.py  evaluator.py  evaluator_byte_ops.py  evaluator_byte_ops_test.py  evaluator_loop_test.py  evaluator_test.py  evaluator_tools_test.py  fastexp_test.py  helpers.py  inner_txn_test.py  mul128_test.py  muldiv64_test.py  saturation_math_test.py  serialize_test.py  state_test.py  u64_array_test.py
