[metadata]
name = pytealext
version = 2.6.0-beta
author = Åukasz Ptak
author_email = lukasz@ulam.io
description = Extra operations for PyTEAL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ulamlabs/pytealext
project_urls =
    Bug Tracker = https://github.com/ulamlabs/pytealext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir = 
    = ./
packages = find:
python_requires = >=3.10
install_requires =
    pyteal >= 0.13
    py-algorand-sdk >= 1.15.0

[options.packages.find]
where = ./
