[metadata]
name = pytealext
version = 3.1.0
author = Åukasz Ptak
author_email = lukasz@ulam.io
description = Extra operations for PyTEAL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ulamlabs/pytealext
project_urls =
    Bug Tracker = https://github.com/ulamlabs/pytealext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir = 
    = ./
packages = find:
python_requires = >=3.10
install_requires =
    pyteal >= 0.22.0, < 1.0.0
    py-algorand-sdk >= 2.0.0, < 3.0.0

[options.packages.find]
where = ./

[mypy]
check_untyped_defs = True
show_column_numbers = True
